--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>making a link tag</title>
+</head>
+<body>
+    <a href="https://flatironschool.com">Flatiron School</a>
+</body>
+
+
+
+
+</html>
